--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Todo App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -48,8 +48,21 @@
             right: 0;
             background: white;
             padding: 1rem;
+            padding-bottom: calc(1rem + env(safe-area-inset-bottom));
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
             z-index: 40;
+            transition: transform 0.3s ease-out;
+        }
+
+        @supports (padding: max(0px)) {
+            .mobile-add-bar {
+                padding-bottom: max(1rem, env(safe-area-inset-bottom));
+            }
+        }
+
+        .mobile-add-bar.keyboard-open {
+            position: fixed;
+            bottom: 0;
         }
 
         @media (min-width: 768px) {
@@ -72,7 +85,7 @@
         }
 
         .content-with-mobile-bar {
-            padding-bottom: 5rem;
+            padding-bottom: calc(5rem + env(safe-area-inset-bottom));
         }
     </style>
 </head>
@@ -84,14 +97,13 @@
             
             <!-- Barre d'ajout mobile -->
             <div class="mobile-add-bar">
-                <div class="flex gap-4">
-                    <input type="text" id="groupInput" placeholder="Nouveau groupe..." 
+                <form onsubmit="addGroup(); return false;" class="flex gap-4">
+                    <input type="text" 
+                        id="groupInput" 
+                        placeholder="Nouveau groupe..." 
+                        enterkeyhint="done"
                         class="flex-1 p-2 border rounded-md focus:outline-none focus:border-blue-500">
-                    <button onclick="addGroup()" 
-                        class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 whitespace-nowrap">
-                        Ajouter
-                    </button>
-                </div>
+                </form>
             </div>
         </div>
 
@@ -107,20 +119,18 @@
 
             <!-- Barre d'ajout mobile -->
             <div class="mobile-add-bar">
-                <div class="flex gap-4">
+                <form onsubmit="addTodo(); return false;" class="flex gap-4">
                     <div class="flex-1 relative">
-                        <input type="text" id="todoInput" 
+                        <input type="text" 
+                            id="todoInput" 
                             placeholder="Ajouter un item (ex: 250 pâtes, tomates 3)" 
+                            enterkeyhint="done"
                             class="w-full p-2 border rounded-md focus:outline-none focus:border-blue-500">
                         <div id="autocompleteList" 
                             class="hidden absolute z-10 w-full bottom-full mb-1 bg-white border rounded-md shadow-lg max-h-48 overflow-y-auto">
                         </div>
                     </div>
-                    <button onclick="addTodo()" 
-                        class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 whitespace-nowrap">
-                        Ajouter
-                    </button>
-                </div>
+                </form>
             </div>
         </div>
     </div>
